<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/simulation"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent">
	<TabHost
		android:id="@android:id/tabhost"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_alignParentTop="true">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">	
			<TabWidget
				android:id="@android:id/tabs"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent" />
			<FrameLayout
				android:id="@android:id/tabcontent"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" />
		</LinearLayout>
	</TabHost>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_alignParentBottom="true"
		android:layout_marginLeft="10dp"
		android:layout_marginBottom="10dp"
		android:gravity="bottom">	
		<Button
			android:id="@+id/play_button" 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/play_caption" />
		<Button
			android:id="@+id/pause_button" 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/pause_caption"
			android:enabled="false" />
		<Button
			android:id="@+id/stop_button" 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/stop_caption"
			android:enabled="false" />
		<TextView android:id="@+id/latency_text" 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
	</LinearLayout>
</RelativeLayout>
